--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "html2canvas": "^1.4.1",
     "luxon": "^3.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
