Add GitHub Actions workflow and update README with zip installation instructions
- Add GitHub Actions workflow for automated builds on main branch
- Add zip script to package.json for creating extension packages
- Update README with zip package installation method
- Update workflow to create fixed filename zip for nightly releases

--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "inspiration",
-  "description": "a Momentum-like extension with quotes from Chinese top entrepreneurs",
-  "version": "0.2.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "html2canvas": "^1.4.1",
-    "luxon": "^3.7.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^5.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "inspiration",
+	"description": "a Momentum-like extension with quotes from Chinese top entrepreneurs",
+	"version": "0.2.1",
+	"private": true,
+	"dependencies": {
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
+		"html2canvas": "^1.4.1",
+		"luxon": "^3.7.2",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-scripts": "5.0.1",
+		"web-vitals": "^5.1.0"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"zip": "cd build && zip -r ../inspiration-v$(node -p 'require(\"../package.json\").version').zip ."
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
