Fix: Fix shell syntax error in version extraction step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,9 @@ jobs:
 
       - name: Get version
         id: get_version
-        run: echo "version=$(node -p \"require('./package.json').version\")" >> $GITHUB_OUTPUT
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Create fixed filename zip for release
         run: cp inspiration-v${{ steps.get_version.outputs.version }}.zip inspiration-extension.zip
